<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:text="@string/email"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_edit"
            app:layout_constraintEnd_toStartOf="@+id/email_edit"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="8"
            app:layout_constraintStart_toEndOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:text="@string/password"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size"
            app:layout_constraintBaseline_toBaselineOf="@id/password_edit"
            app:layout_constraintEnd_toStartOf="@+id/password_edit"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:inputType="textPassword"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="8"
            app:layout_constraintStart_toEndOf="@+id/password_text"
            app:layout_constraintTop_toBottomOf="@+id/email_edit" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_big"
            android:layout_marginTop="@dimen/layout_margin_big"
            android:layout_marginEnd="@dimen/layout_margin_big"
            android:padding="@dimen/padding"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_big"
            android:layout_marginTop="@dimen/layout_margin_big"
            android:layout_marginEnd="@dimen/layout_margin_big"
            android:background="@android:color/transparent"
            android:padding="@dimen/padding"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
